vpc/vpc-nat-gateway.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC: NAT Gateway, a cloudonaut.io template'
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
    - Label:
        default: 'Parent Stacks'
      Parameters:
      - ParentVPCStack
      - ParentAlertStack
    - Label:
        default: 'NatGateway Parameters'
      Parameters:
      - SubnetZone
      - SubnetCount
Parameters:
  ParentVPCStack:
    Description: 'Stack name of parent VPC stack based on vpc/vpc-*azs.yaml template.'
    Type: String
  ParentAlertStack:
    Description: 'Optional but recommended stack name of parent alert stack based on operations/alert.yaml template.'
    Type: String
    Default: ''
  SubnetZone:
    Description: 'Subnet zone.'
    Type: String
    Default: A
    AllowedValues:
    - A
    - B
  SubnetCount:
    Description: 'Number of subnets to apply NAT Gateway route to.'
    Type: String
    Default: 2
    AllowedValues:
    - 2
    - 3
    - 4
Conditions:
  HasAlertTopic: !Not [!Equals [!Ref ParentAlertStack, '']]
  Has3Subnets: !Equals [!Ref SubnetCount, 3]
  Has4Subnets: !Equals [!Ref SubnetCount, 4]
  HasAtLeast3Subnets: !Or [!Condition Has3Subnets, !Condition Has4Subnets]
Resources:
  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP.AllocationId'
      SubnetId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-Subnet${SubnetZone}Public'
  RouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-RouteTableAPrivate'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway
  RouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-RouteTableBPrivate'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway
  RouteC:
    Type: AWS::EC2::Route
    Condition: HasAtLeast3Subnets
    Properties:
      RouteTableId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-RouteTableCPrivate'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway
  RouteD:
    Type: AWS::EC2::Route
    Condition: Has4Subnets
    Properties:
      RouteTableId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-RouteTableDPrivate'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway
  AlarmNatGatewayErrorPortAllocation:
    Condition: HasAlertTopic
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: !Sub 'NAT gateway ${SubnetZone} could not allocate a source port'
      Namespace: 'AWS/NATGateway'
      MetricName: ErrorPortAllocation
      Statistic: Sum
      Period: 60
      EvaluationPeriods: 1
      ComparisonOperator: GreaterThanThreshold
      Threshold: 0
      AlarmActions:
      - 'Fn::ImportValue': !Sub '${ParentAlertStack}-TopicARN'
      Dimensions:
      - Name: NatGatewayId
        Value: !Ref NatGateway
  AlarmNatGatewayPacketsDropCount:
    Condition: HasAlertTopic
    Type: 'AWS::CloudWatch::Alarm'
    Properties:
      AlarmDescription: !Sub 'NAT gateway ${SubnetZone} dropped packets'
      Namespace: 'AWS/NATGateway'
      MetricName: PacketsDropCount
      Statistic: Sum
      Period: 60
      EvaluationPeriods: 1
      ComparisonOperator: GreaterThanThreshold
      Threshold: 0
      AlarmActions:
      - 'Fn::ImportValue': !Sub '${ParentAlertStack}-TopicARN'
      Dimensions:
      - Name: NatGatewayId
        Value: !Ref NatGateway
Outputs:
  TemplateID:
    Description: 'cloudonaut.io template id.'
    Value: 'vpc/vpc-nat-gateway'
  TemplateVersion:
    Description: 'cloudonaut.io template version.'
    Value: '__VERSION__'
  StackName:
    Description: 'Stack name.'
    Value: !Sub '${AWS::StackName}'
  IPAddress:
    Description: 'The public IP address of the NAT gateway.'
    Value: !Ref EIP
    Export:
      Name: !Sub '${AWS::StackName}-IPAddress'
